overflow hidden property added to app to help address toolbar issue on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,7 @@
   color: #CCCCCC;
   /* text-align: center; */
   margin: auto;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .app-header {
@@ -18,7 +18,6 @@
   justify-content: center;
   height: 80vh;
   width: 100%;
-  overflow: scroll;
 }
 
 .app-footer{
